@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Service for retrieving order events from the event_publication table.
@@ -28,21 +27,12 @@ public class OrderEventService {
     public List<OrderEventResponse> findAllByOrderId(UUID orderId) {
         log.info("Finding all events for order: {}", orderId);
 
-        // First, try to find all events to see if any exist
-        List<OrderEvent> allEvents = orderEventRepository.findAllEvents();
-        log.info("Found {} events in total", allEvents.size());
-        for (OrderEvent event : allEvents) {
-            log.info("Event: id={}, type={}, serializedEvent={}", 
-                    event.getId(), event.getEventType(), event.getSerializedEvent());
-        }
-
-        // Then, try to find events for the specific order
         List<OrderEvent> orderEvents = orderEventRepository.findByOrderId(orderId.toString());
         log.info("Found {} events for order {}", orderEvents.size(), orderId);
 
         return orderEvents.stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
